testsuite/tests/typecheck/should_fail/T6022.hs
module T6022 where

f x = x == head
