testsuite/tests/typecheck/should_fail/T6022.stderr

T6022.hs:3:1: error:
    Non type-variable argument in the constraint: Eq ([a0] -> a0)
    (Use FlexibleContexts to permit this)
    When checking that ‘f’ has the inferred type
      f :: forall a0. Eq ([a0] -> a0) => ([a0] -> a0) -> Bool
